# WhyHazel

./: .gitignore  CMakeLists.txt  README.md
cmake/: function.cmake  short_path.cmake
doc/事件系统/: 事件系统.drawio  事件系统.md
doc/渲染实现/: 0-渲染实现.md  1-数据布局.drawio  2-VBO、EBO和VAO.drawio
src/: CMakeLists.txt
src/Hazel/: CMakeLists.txt  Hazel.h  hzpch.h
src/Hazel/Hazel/: Application.cpp  Application.h  Core.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  OrthographicCameraController.h  Window.h
src/Hazel/Hazel-Editor/: HazelEditorApp.cpp
src/Hazel/Hazel/Core/: Application.cpp  Application.h  Base.h  Core.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Timestep.h  Window.cpp  Window.h
src/Hazel/Hazel/Debug/: Instrumentor.h
src/Hazel/Hazel/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/Hazel/Hazel/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
src/Hazel/Hazel/Math/: HazelMath.cpp  HazelMath.h  Math.cpp
src/Hazel/Hazel/Renderer/: Buffer.cpp  Buffer.h  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/Hazel/Hazel/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
src/Hazel/Hazel/Utils/: PlatformUtils.h
src/Hazel/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
src/Hazel/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
src/Hazelnut/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.h  HazelEditorApp.cpp
src/Hazelnut/assets/shaders/: Texture.glsl
src/Hazelnut/panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
src/Sandbox/: CMakeLists.txt  ExampleLayer.cpp  ExampleLayer.h  Sandbox.cpp  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
src/Sandbox/assets/shaders/: Texture.glsl
src/WhyUtil/: CMakeLists.txt  FileUtil.cpp  FileUtil.h  TextUtil.cpp  TextUtil.h
